--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
       <div class="text-center">
         <a
-          href="PLACEHOLDER-LINK"
+          href="https://kkb6202.github.io/Knightfall-Features/"
           target="_blank"
           class="cursor-pointer inline-flex items-center justify-center w-full h-20 px-20 font-medium tracking-wide text-white transition duration-200 rounded shadow-md md:w-auto bg-primary-blue hover:bg-primary-blue-light focus:shadow-outline focus:outline-none"
         >
