--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div
         class="flex justify-center h-full lg:w-2/3 xl:w-1/2 lg:absolute lg:justify-start lg:bottom-0 lg:right-0 lg:items-end"
       >
-        <p style="color: white;">PLACEHOLDER-LOGO</p>
+         <img src="https://imgur.com/a/oM4j6aU">
       </div>
     </div>
     <p style="color: white;">
